# ocr-sample

./: README.md  compare_md.py  llm_ocr.py  main.py  pyproject.toml
